# simdscan

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release-plz.yml
src/: main.rs
